--- a/.github/workflows/Cache-Clean.yml
+++ b/.github/workflows/Cache-Clean.yml
@@ -1,9 +1,12 @@
 name: Cache-Clean
 
 on:
-  #schedule:
-  #  - cron: 0 20 * * 0
+  #自动编译：当Auto-Clean运行完成后
   workflow_dispatch:
+  # workflow_run:
+  #   workflows: ["Auto-Clean"]
+  #   types:
+  #     - completed
 
 permissions: write-all
 
