--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -154,6 +154,7 @@ jobs:
       - name: Custom Packages
         run: |
           cd ./wrt/package/
+          echo $GITHUB_WORKSPACE
 
           $GITHUB_WORKSPACE/Scripts/Packages.sh
           $GITHUB_WORKSPACE/Scripts/Handles.sh
